[package]
name = "playtime-api"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"

[dependencies]
serde.workspace = true
# TODO-medium Actually not necessary anymore because we generate Dart directly now.
schemars.workspace = true
# For being able to use various attributes that can help in Rust-to-Dart code generation
realearn-macros.workspace = true