[package]
name = "playtime-api"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false

[dependencies]
serde.workspace = true
# For reusing common sound-related types that conveniently happen to be compatible with REAPER
reaper-common-types.workspace = true
# For exposing a runtime API within REAPER
reaper-low.workspace = true
# For being able to use the API macro
realearn-macros.workspace = true
# For generating random IDs
nanoid.workspace = true
# For easier Display impl
derive_more.workspace = true
# For encoding/decoding a signed matrix value
rmp-serde.workspace = true
# For encoding/decoding a signed matrix value
base64 = "0.21.2"
# For proper error types
thiserror.workspace = true
# For date/time persistence
chrono = { workspace = true, features = ["serde"] }
# For better error handling
anyhow.workspace = true