[package]
name = "playtime-clip-engine"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"

[dependencies]
reaper-high = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master", features = ["serde"] }
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master", features = ["serde"] }
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
# reaper-high = { path = "../../reaper-rs/main/high", features = ["serde"] }
# reaper-medium= { path = "../../reaper-rs/main/medium", features = ["serde"] }
# reaper-low = { path = "../../reaper-rs/main/low" }
playtime-api = { path = "../playtime-api" }
helgoboss-midi = { version = "0.3", features = ["serde", "serde_repr"] }
# In future (when helgoboss-learn has matured), this will become a crates.io dependency
helgoboss-learn = { path = "../main/lib/helgoboss-learn", features = ["serde", "serde_repr", "serde_with", "reaper-low"] }
# Ring buffer for clip stretching
rtrb = "0.2.1"
crossbeam-channel = "0.5"
# For our own timeline
atomic = "0.5.1"
# For making sure that we can have a cheap atomic f64
static_assertions = "1.1.0"
# For detecting undesired (de)allocation in real-time threads.
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", branch = "master" }
# For using bit flags in the reaper-rs API.
enumflags2 = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
# For generating random file names
nanoid = "0.3.0"
# For deriving file names
slug = "0.1.4"
num_enum = "0.5.0"
# For being able to exclude fields from the derived Debug implementation
derivative = "2.2.0"
# For fast non-cryptographic hashing
twox-hash = "1.6.1"
# For easily deriving Display trait
derive_more = "0.99.5"
# For profiling
metrics = "0.18.0"
# For lazy-loading whether metrics enabled
once_cell = "1.4.0"
# For logging
tracing = "0.1.31"
# For gRPC server
tonic = "0.5"
# For gRPC server
prost = "0.8"