[package]
name = "playtime-clip-engine"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"

[dependencies]
# Own
reaper-high.workspace = true
reaper-medium.workspace = true
reaper-low.workspace = true
playtime-api.workspace = true
helgoboss-midi.workspace = true
helgoboss-learn.workspace = true
base.workspace = true
swell-ui.workspace = true

#3rd-party
# Ring buffer for clip stretching
rtrb = "0.2.1"
crossbeam-channel.workspace = true
# For our own timeline
atomic = "0.5.1"
# For making sure that we can have a cheap atomic f64
static_assertions = "1.1.0"
# For detecting undesired (de)allocation in real-time threads.
assert_no_alloc.workspace = true
# For using bit flags in the reaper-rs API.
enumflags2.workspace = true
serde.workspace = true
# For generating random file names
nanoid.workspace = true
# For deriving file names
slug.workspace = true
num_enum.workspace = true
# For being able to exclude fields from the derived Debug implementation
derivative.workspace = true
# For fast non-cryptographic hashing
xxhash-rust.workspace = true
# For easily deriving Display trait
derive_more.workspace = true
# For profiling
metrics.workspace = true
# For lazy-loading whether metrics enabled
once_cell.workspace = true
# For logging
tracing.workspace = true
# For gRPC server
tonic.workspace = true
# For gRPC server
prost.workspace = true
# For random clip IDs
ulid = "1.0.0"
# For being able to return iterators of different types
either.workspace = true
# For being able to serialize the persistent matrix data to JSON
serde_json.workspace = true
# For being able to quickly looking up slots and clips by ID while still maintaining order
indexmap.workspace = true
# For joining undo history labels
itertools.workspace = true