[package]
name = "pot"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false

[dependencies]
# Own
base.workspace = true
reaper-high.workspace = true
reaper-medium.workspace = true
realearn-api.workspace = true
rppxml-parser.workspace = true

# 3rd-party
enumset.workspace = true
indexmap.workspace = true
itertools.workspace = true
wildmatch.workspace = true
serde.workspace = true
derive_more.workspace = true
tokio.workspace = true
enum-map.workspace = true
once_cell.workspace = true
lexical-sort = "0.3.1"
strum.workspace = true
splitty = "1.0.1"
rust-ini.workspace = true
walkdir.workspace = true
either.workspace = true
fallible-iterator = "0.2"
riff-io = "0.1.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
rmp-serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
futures.workspace = true
derivative.workspace = true
tempfile.workspace = true
sanitize-filename = "0.4.0"
tracing.workspace = true
regex.workspace = true
helgoboss-allocator.workspace = true
nanoid.workspace = true
chrono.workspace = true