[package]
name = "pot"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false

[dependencies]
# Own
base.workspace = true
reaper-high.workspace = true
reaper-medium.workspace = true
helgobox-api.workspace = true
rppxml-parser.workspace = true

# 3rd-party
enumset.workspace = true
itertools.workspace = true
wildmatch.workspace = true
serde.workspace = true
derive_more.workspace = true
tokio.workspace = true
enum-map.workspace = true
once_cell.workspace = true
lexical-sort.workspace = true
strum.workspace = true
splitty.workspace = true
rust-ini.workspace = true
walkdir.workspace = true
either.workspace = true
riff-io.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
rmp-serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
futures.workspace = true
derivative.workspace = true
tempfile.workspace = true
sanitize-filename.workspace = true
tracing.workspace = true
regex.workspace = true
nanoid.workspace = true
chrono.workspace = true
anyhow.workspace = true
camino.workspace = true