[package]
name = "swell-ui"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"

[dependencies]
reaper-medium.workspace = true
reaper-low.workspace = true
rxrust.workspace = true
rx-util.workspace = true
scopeguard.workspace = true
raw-window-handle.workspace = true

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
palette = "0.5"
libloading = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.3.0-beta.3"


# Disabled until we get egui to work nicely (search for "wonky"). It's also important to use cross v0.3.0 then
# (once it's released) because cross v2.5 uses Ubuntu < v20, which has an old glib that's not compatible with the
# glib crate (gdk-sys dependency).
# [target.'cfg(target_os = "linux")'.dependencies]
# gdk-sys = "0.17.0"
# gdkx11-sys = "0.17.0"

[build-dependencies]
bindgen.workspace = true